; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-usb/extr_dibusb-common.c_dibusb_power_ctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-usb/extr_dibusb-common.c_dibusb_power_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_usb_device = type { i32 }

@DIBUSB_REQ_SET_IOCTL = common dso_local global i32 0, align 4
@DIBUSB_IOCTL_CMD_POWER_MODE = common dso_local global i32 0, align 4
@DIBUSB_IOCTL_POWER_WAKEUP = common dso_local global i32 0, align 4
@DIBUSB_IOCTL_POWER_SLEEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dibusb_power_ctrl(%struct.dvb_usb_device* %0, i32 %1) #0 {
  %3 = alloca %struct.dvb_usb_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [3 x i32], align 4
  %6 = alloca i32, align 4
  store %struct.dvb_usb_device* %0, %struct.dvb_usb_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @DIBUSB_REQ_SET_IOCTL, align 4
  %8 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @DIBUSB_IOCTL_CMD_POWER_MODE, align 4
  %10 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @DIBUSB_IOCTL_POWER_WAKEUP, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @DIBUSB_IOCTL_POWER_SLEEP, align 4
  br label %17

17:                                               ; preds = %15, %13
  %18 = phi i32 [ %14, %13 ], [ %16, %15 ]
  %19 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 2
  store i32 %18, i32* %19, align 4
  %20 = load %struct.dvb_usb_device*, %struct.dvb_usb_device** %3, align 8
  %21 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %22 = call i32 @dvb_usb_generic_write(%struct.dvb_usb_device* %20, i32* %21, i32 3)
  store i32 %22, i32* %6, align 4
  %23 = call i32 @msleep(i32 10)
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local i32 @dvb_usb_generic_write(%struct.dvb_usb_device*, i32*, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
